[package]
name = "mesh-vpn"
version = "0.2.0"
edition = "2021"
authors = ["MeshVPN Project"]
description = "A modern, decentralized VPN with NAT traversal, similar to Tailscale/Zerotier/WireGuard"
license = "MIT/Apache-2.0"
repository = "https://github.com/example/mesh-vpn"

[features]
default = ["udp", "tcp", "http"]
# tun = ["tun2", "rtnetlink"] (temporarily disabled)
udp = []
tcp = []
http = ["hyper", "rustls-native-certs"]
testing = []

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

# 加密
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
hmac = "0.12"
rand = { version = "0.8", features = ["std_rng"] }
ring = "0.17"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rmp-serde = "1.1"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"
eyre = "0.6"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
tracing-appender = "0.2"

# 网络
bytes = "1.5"
socket2 = { version = "0.5", features = ["all"] }
quinn = "0.10"
quinn-proto = "0.10"
quinn-udp = "0.4"

# TUN 设备 (temporarily disabled)
# tun2 = { version = "4.0", optional = true }
# rtnetlink = { version = "0.13", optional = true }

# 配置
config = "0.14"
toml = "0.8"
clap = { version = "4.4", features = ["derive", "env"] }
dirs = "5.0"

# HTTP API
hyper = { version = "1.1", features = ["full"], optional = true }
rustls-native-certs = { version = "0.7", optional = true }

# 工具
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1.18"
lru = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
hex = "0.4"

# 时间
chrono = "0.4"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# 系统
libc = "0.2"
nix = "0.27"

# 监控
prometheus = "0.13"

# 数据库
sled = "0.34"

[[bin]]
name = "meshvpn"
path = "src/main.rs"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
